--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,7 @@
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="theme-color" content="#ffffff">
 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap">
 	<link rel="stylesheet" href="global.css">
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
