--- a/src/app.html
+++ b/src/app.html
@@ -10,13 +10,15 @@
 		<link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials" />
 		<meta name="msapplication-TileColor" content="#2d89ef" />
 		<meta name="theme-color" content="#ffffff" />
-		<!-- See https://www.filamentgroup.com/lab/load-css-simpler/ -->
-		<link rel="stylesheet" media="print" href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap" onload="this.media='all';this.onload=null" />
-		<link rel="stylesheet" href="/global.css" media="print" onload="this.media='all';this.onload=null" />
 		<style>*{box-sizing:border-box;border:0 none;margin:0;padding:0}:root,html{--color-invert-bg:#444;--color-invert-link-off:white;--color-invert-link-on:deepskyblue;--content-width:60ch;--content-bleed:calc((100vw - var(--scrollbar-width, 10px) - var(--content-width)) / 2);--space-xl:2rem;--space-l:1rem;--space:0.75rem;--space-s:0.5rem;--space-xs:0.25rem;--b-radius:0.33rem;--b-radius-s:0.2rem}@media (min-width: 30rem) and (max-width: 100rem){:root,html{font-size:calc(1rem + .5 * ((100vmin - 30rem) / 70))}}@media (min-width: 100rem){:root,html{font-size:1.2rem}}body{font-family:'Gudea', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"}#svelte{display:flex;flex-direction:column;justify-content:space-between;margin-left:auto;margin-right:auto;width:var(--content-width);max-width:100%;min-height:100vh}@media (min-width: 60ch){.full-vw{margin-left:calc(var(--content-bleed) * -1);margin-right:calc(var(--content-bleed) * -1)}.full-vw--padded{padding-right:var(--content-bleed);padding-left:var(--content-bleed)}}main{display:flex;flex-direction:column;flex-grow:1}main > .fill-h{flex-grow:1}img{display:inline-block;max-width:100%}.f-grid{--gutter:var(--space-l);--item-width:50%;display:flex;flex-wrap:wrap;justify-content:center;margin:0;padding:0}.f-grid > *{flex:1 0 var(--item-width)}.f-grid--g,.f-grid--g > *{padding:calc(var(--gutter) / 2)}.f-grid--center{align-items:center}.u-sr-only{position:absolute;overflow:hidden;clip:rect(0, 0, 0, 0);border:0;margin:-1px;padding:0;width:1px;height:1px}.MenuMain-wrap{margin-bottom:1.5rem;padding-top:0.25rem;padding-bottom:0.25rem;background-color:var(--color-invert-bg)}.MenuMain-inner-wrap{display:flex;align-items:center;width:100%}.MenuMain-logo{position:relative;display:block;line-height:1;width:1.66rem;text-decoration:none}.MenuMain{display:flex;justify-content:space-evenly;width:100%}.MenuMain-item{padding:0 var(--space-s)}.MenuMain-link,.MenuMain-link:link,.MenuMain-link:visited{display:inline-block;vertical-align:middle;line-height:1;color:var(--color-invert-link-off);font-weight:bold;text-decoration:none}</style>
+		<noscript>
+			<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap" />
+			<link rel="stylesheet" href="/global.css" />
+		</noscript>
 		%svelte.head%
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
+		<script>/* See https://css-tricks.com/annotating-critical-css/ */function lCss(u,m){var l=document.createElement('link');l.rel='stylesheet';l.type='text/css';l.href=u;l.media=m;document.getElementsByTagName('head')[0].appendChild(l)}function dCss(){lCss('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap','all');lCss('/global.css','all')}if(window.addEventListener){window.addEventListener('DOMContentLoaded',dCss,false)}else{window.onload=dCss}</script>
 	</body>
 </html>
